--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fvtt-player-achievements",
-  "version": "1.0.6",
+  "version": "1.1.0-beta.0",
   "description": "Player Achievements for Foundry VTT",
   "main": "index.js",
   "author": {
@@ -20,7 +20,14 @@
       "email": "ed@eddiedover.dev"
     }
   ],
-  "type": "module",
+  "bugs": {
+    "url": "https://www.github.com/EddieDover/fvtt-player-achievements/issues",
+    "email": "ed@eddiedover.dev"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/EddieDover"
+  },
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp watch",
