--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "url": "https://github.com/sponsors/EddieDover"
   },
   "scripts": {
+    "package": "gulp zip-dist",
     "build": "gulp build",
     "build:watch": "gulp watch",
     "link-project": "gulp link",
@@ -55,7 +56,9 @@
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "gulp-dart-sass": "^1.1.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-zip": "^6.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
