--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fvtt-player-achievements",
-  "version": "1.1.0-beta.0",
+  "version": "1.1.0",
   "description": "Player Achievements for Foundry VTT",
   "main": "index.js",
   "author": {
