reafactored code base to make naming more consistant and provide better API functionality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,7 @@
 
     "overrides": [
       {
-        "files": ["./*.js", "./*.cjs", "./*.mjs"],
+        "files": ["./src/**/*.js", "./*.cjs", "./*.mjs"],
         "env": {
           "node": true
         }
