--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "test:watch": "jest --watch",
     "test:ci": "jest --ci --reporters=default --reporters=jest-junit",
     "postinstall": "husky install",
-    "changelog2": "generate-changelog -u https://github.com/EddieDover/fvtt-player-achievements"
+    "changelog2": "generate-changelog -u https://github.com/EddieDover/fvtt-player-achievements",
+    "genapidoc": "npx jsdoc2md --helper ./api_doc_generation/apihelpers.js --template ./api_doc_generation/apidoctemplate.hbs ./src/module/api.js > ./API.md"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.1",
@@ -64,6 +65,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "jsdoc-to-markdown": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "rollup": "^2.79.1",
