corrected devexport packaging

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "link-project": "gulp link",
     "clean": "gulp clean",
     "clean:link": "gulp link --clean",
+    "devexport": "gulp devexport",
     "lint": "eslint --ext .js,.cjs,.mjs .",
     "lint:fix": "eslint --ext .js,.cjs,.mjs --fix .",
     "format": "prettier --write \"./**/*.(js|cjs|mjs|json|yml|scss)\"",
@@ -49,6 +50,7 @@
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/stream": "^3.0.0",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
+    "del": "^7.1.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.4.2",
