--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
-blank_issues_enabled: false
+blank_issues_enabled: true
 contact_links:
   - name: Discuss adding a new Feature
     url: https://github.com/EddieDover/fvtt-player-achievements/discussions/categories/ideas
