initial cypress install

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "build": "gulp build",
     "build:watch": "gulp watch",
     "link-project": "gulp link",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:run:cli": "cypress run --headless",
     "clean": "gulp clean",
     "clean:link": "gulp link --clean",
     "devexport": "gulp devexport",
@@ -52,6 +55,7 @@
     "@rollup/stream": "^3.0.0",
     "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
     "commit-and-tag-version": "^12.2.0",
+    "cypress": "^13.6.4",
     "del": "^7.1.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
