--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "cypress:run:cli": "cypress run --headless",
+    "coverage": "jest --coverage",
     "clean": "gulp clean",
     "clean:link": "gulp link --clean",
     "devexport": "gulp devexport",
@@ -75,8 +76,8 @@
     "jest-junit": "^16.0.0",
     "jsdoc-to-markdown": "^8.0.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
     "postcss": ">=8.4.31",
+    "prettier": "^3.0.3",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
     "vinyl-buffer": "^1.0.1",
