--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,5 @@
 remote_theme: pages-themes/cayman@v0.2.0
+whitelist: ['jekyll_version_plugin']
 plugins:
 - jekyll-remote-theme
 - jekyll_version_plugin
