--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fvtt-player-achievements",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "Player Achievements for Foundry VTT",
   "main": "index.js",
   "author": {
@@ -46,7 +46,7 @@
     "genapidoc": "npx jsdoc2md --helper ./api_doc_generation/apihelpers.js --template ./api_doc_generation/apidoctemplate.hbs ./src/module/api.js > ./API.md",
     "release": "commit-and-tag-version --sign",
     "release:dry": "commit-and-tag-version --dry-run",
-    "release:dry:upcoming": "commit-and-tag-version --dry-run --silent > UPCOMING_CHANGELOG.md"
+    "release:upcoming": "commit-and-tag-version --dry-run --silent > UPCOMING_CHANGELOG.md"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.1",
