[Bug]: Game Settings menu section duplicates on scene change Fixes #98

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,12 @@
       //"unicorn/better-regex": "error"
 
     },
-
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "overrides": [
       {
         "files": ["./src/**/*.js", "./*.cjs", "./*.mjs"],
